--- a/trunk/web/style.css
+++ b/trunk/web/style.css
@@ -48,13 +48,13 @@ a:hover {
 	text-align:left;
 	padding-top: 10px;
 	margin: 0.5em;
-	font-size: x-small;
+	font-size: small;
 	clear: both;
 }
 
 .footer {
 	line-height:2em;
-	font-size: x-small;
+	font-size: small;
 	text-align: center;
 }
 
@@ -109,7 +109,7 @@ h1 {
 }
 
 .sayfa h1 {
-	font-size: large;
+	font-size: x-large;
 	font-weight:bold;
 	padding-left:20px;
 	padding-bottom:5px;
@@ -121,20 +121,20 @@ h1 {
 }
 
 .sayfa h2 {
-	font-size: medium;
+	font-size: large;
 	font-weight: bold;
 	color:#06c;
 }
 
 .sayfa h3 {
-	font-size: medium;
+	font-size: large;
 	font-weight: normal;
 	color:#06c;
 	margin-bottom: 0.5em;
 }
 
 .sayfa h4 {
-	font-size: small;
+	font-size: medium;
 	font-weight: normal;
 	color:#06c;
 }
@@ -142,7 +142,7 @@ h1 {
 .sayfa p {
 	padding-left:15px;
 	padding-right:20px;
-	font-size: x-small;
+	font-size: small;
 	line-height:1.5em;
 }
 
@@ -155,7 +155,7 @@ h1 {
 }
 
 .sayfa font {
-	font-size: x-small ! important;
+	font-size: small ! important;
 }
 
 .altcizgi {
