--- a/trunk/web/belgeler.tmpl
+++ b/trunk/web/belgeler.tmpl
@@ -17,6 +17,14 @@ $doc=https://svn.uludag.org.tr/internal/repos/doc/proje_ana_sozlesmesi.lyx$
 </tr>
 
 <tr>
+$doc=https://svn.uludag.org.tr/paketler/repos/doc/nasil_yardim_ederim.lyx$
+<td align="left"><b>Nasıl Yardım Ederim</b> ($date$)</td>
+<td><a href="./$html_link$">HTML</a></td>
+<td><a href="./$html_single_link$">HTML (tek sayfa)</a></td>
+<td><a href="./$pdf_link$">PDF ($pdf_size$ KB)</a></td>
+</tr>
+
+<tr>
 $doc=https://svn.uludag.org.tr/paketler/repos/doc/svn.lyx$
 <td align="left"><b>$title$</b> ($date$)</td>
 <td><a href="./$html_link$">HTML</a></td>
