Onur'u ekledik, comar mimari belgesi, ufak fixler

--- a/trunk/web/belgeler.tmpl
+++ b/trunk/web/belgeler.tmpl
@@ -50,6 +50,14 @@ $doc=https://svn.uludag.org.tr/internal/trunk/DT/comar_nedir.lyx$
 <td><a href="./$pdf_link$">PDF ($pdf_size$ KB)</a></td>
 </tr>
 
+<tr>
+$doc=https://svn.uludag.org.tr/internal/repos/doc/VCTD.lyx$
+<td align="left"><b>Çomar Mimarisi</b> ($date$)</td>
+<td><a href="./$html_link$">HTML</a></td>
+<td><a href="./$html_single_link$">HTML (tek sayfa)</a></td>
+<td><a href="./$pdf_link$">PDF ($pdf_size$ KB)</a></td>
+</tr>
+
 <tr><td colspan=5><center><img src="./images/tuxhd_head.png" alt="hd"></center></td></tr>
 
 <tr>
