--- a/trunk/web/style.css
+++ b/trunk/web/style.css
@@ -60,7 +60,7 @@ a:hover {
 
 .box {
 	clear: both;
-	margin: 1em;
+	margin: 0.5em;
 }
 
 .imgbox {
@@ -106,11 +106,11 @@ h1 {
 
 .sayfa {
 	text-align: left;
-	margin: 2em;
+	margin: 0.5em;
 }
 
 .sayfa h1 {
-	font-size: x-large;
+	font-size: large;
 	font-weight:bold;
 	padding-left:20px;
 	padding-bottom:5px;
