yeni belgeleri web sayfasına ekliyoruz.

--- a/trunk/web/belgeler.tmpl
+++ b/trunk/web/belgeler.tmpl
@@ -9,7 +9,7 @@
 <tr><td colspan=5><center><img src="./images/tux_head.png" alt="genel"></center></td></tr>
 
 <tr>
-$doc=https://svn.uludag.org.tr/internal/repos/doc/proje_ana_sozlesmesi.lyx$
+$doc=https://svn.uludag.org.tr/uludag/repos/doc/proje_ana_sozlesmesi.lyx$
 <td align="left"><b>Proje Ana Sözleşmesi</b> ($date$)</td>
 <td><a href="./$html_link$">HTML</a></td>
 <td><a href="./$html_single_link$">HTML (tek sayfa)</a></td>
@@ -17,15 +17,31 @@ $doc=https://svn.uludag.org.tr/internal/repos/doc/proje_ana_sozlesmesi.lyx$
 </tr>
 
 <tr>
-$doc=https://svn.uludag.org.tr/paketler/repos/doc/nasil_yardim_ederim.lyx$
-<td align="left"><b>Nasıl Yardım Ederim</b> ($date$)</td>
+$doc=https://svn.uludag.org.tr/uludag/repos/doc/kalite.lyx$
+<td align="left"><b>$title$</b> ($date$)</td>
 <td><a href="./$html_link$">HTML</a></td>
 <td><a href="./$html_single_link$">HTML (tek sayfa)</a></td>
 <td><a href="./$pdf_link$">PDF ($pdf_size$ KB)</a></td>
 </tr>
 
 <tr>
-$doc=https://svn.uludag.org.tr/paketler/repos/doc/svn.lyx$
+$doc=https://svn.uludag.org.tr/uludag/repos/doc/yerellestirme_gruplari/yerellestirme.lyx$
+<td align="left"><b>$title$</b> ($date$)</td>
+<td><a href="./$html_link$">HTML</a></td>
+<td><a href="./$html_single_link$">HTML (tek sayfa)</a></td>
+<td><a href="./$pdf_link$">PDF ($pdf_size$ KB)</a></td>
+</tr>
+
+<tr>
+$doc=https://svn.uludag.org.tr/uludag/repos/doc/programlama_stili.lyx$
+<td align="left"><b>$title$</b> ($date$)</td>
+<td><a href="./$html_link$">HTML</a></td>
+<td><a href="./$html_single_link$">HTML (tek sayfa)</a></td>
+<td><a href="./$pdf_link$">PDF ($pdf_size$ KB)</a></td>
+</tr>
+
+<tr>
+$doc=https://svn.uludag.org.tr/uludag/repos/doc/yeni_gelistirici.lyx$
 <td align="left"><b>$title$</b> ($date$)</td>
 <td><a href="./$html_link$">HTML</a></td>
 <td><a href="./$html_single_link$">HTML (tek sayfa)</a></td>
@@ -33,7 +49,7 @@ $doc=https://svn.uludag.org.tr/paketler/repos/doc/svn.lyx$
 </tr>
 
 <tr style="padding-bottom: 2em;">
-$doc=https://svn.uludag.org.tr/internal/trunk/yonetim_kararlar/neden_lyx.lyx$
+$doc=https://svn.uludag.org.tr/uludag/repos/doc/neden_lyx.lyx$
 <td align="left"><b>$title$</b> ($date$)</td>
 <td><a href="./$html_link$">HTML</a></td>
 <td><a href="./$html_single_link$">HTML (tek sayfa)</a></td>
@@ -43,7 +59,7 @@ $doc=https://svn.uludag.org.tr/internal/trunk/yonetim_kararlar/neden_lyx.lyx$
 <tr><td colspan=5><center><img src="./images/tuxdt_head.png" alt="dt"></center></td></tr>
 
 <tr>
-$doc=https://svn.uludag.org.tr/internal/trunk/DT/comar_nedir.lyx$
+$doc=https://svn.uludag.org.tr/uludag/trunk/COMAR/comar_nedir.lyx$
 <td align="left"><b>Çomar Nedir, Yenir Mi?</b> ($date$)</td>
 <td><a href="./$html_link$">HTML</a></td>
 <td><a href="./$html_single_link$">HTML (tek sayfa)</a></td>
@@ -51,7 +67,7 @@ $doc=https://svn.uludag.org.tr/internal/trunk/DT/comar_nedir.lyx$
 </tr>
 
 <tr>
-$doc=https://svn.uludag.org.tr/internal/repos/doc/VCTD.lyx$
+$doc=https://svn.uludag.org.tr/uludag/trunk/COMAR/VCTD.lyx$
 <td align="left"><b>Çomar Mimarisi</b> ($date$)</td>
 <td><a href="./$html_link$">HTML</a></td>
 <td><a href="./$html_single_link$">HTML (tek sayfa)</a></td>
