yükseklik sabit olsun

--- a/trunk/web/2008/css/style.css
+++ b/trunk/web/2008/css/style.css
@@ -112,6 +112,7 @@ img.floatr, img[align="right"] {
     padding-top: 16px;
     padding-left: 16px;
     width: 640px;
+    height: 281px;
     overflow: none;
 }
 
