bireysel sss için 6 soru

--- a/trunk/web/2008/css/stil.css
+++ b/trunk/web/2008/css/stil.css
@@ -163,6 +163,10 @@ img.floatr, img[align="right"] {
     float: left;
 }
 
+.icerik_sss_cevaplar a {
+    color: white;
+}
+
 .icerik_sss_cevaplar h3 {
     color: orange;
 }
