--- a/trunk/web/2008/css/stil.css
+++ b/trunk/web/2008/css/stil.css
@@ -131,7 +131,7 @@ img.floatr, img[align="right"] {
 }
 
 .icerik_sss_sorular {
-    line-height: 14px;
+    line-height: 13px;
     font-size: 11px;
     color: #fff;
     margin-top: 16px;
@@ -143,7 +143,8 @@ img.floatr, img[align="right"] {
 }
 
 .icerik_sss_sorular h3 {
-    
+    font-size: 15px;
+    line-height: 16px;
 }
 
 .icerik_sss_sorular a {
@@ -152,7 +153,7 @@ img.floatr, img[align="right"] {
 }
 
 .icerik_sss_cevaplar {
-    line-height: 14px;
+    line-height: 13px;
     font-size: 11px;
     color: #fff;
     margin-top: 16px;
@@ -168,7 +169,9 @@ img.floatr, img[align="right"] {
 }
 
 .icerik_sss_cevaplar h3 {
-    color: orange;
+    color: #FFFCCC;
+    font-size: 15px;
+    line-height: 16px;
 }
 
 .icerik_sss_dikeybolucu {
