--- a/trunk/web/2008/css/stil.css
+++ b/trunk/web/2008/css/stil.css
@@ -308,22 +308,24 @@ li.secili a {
     background: url('../resim/altgriarka.png') no-repeat;
 }
 
-.footer img {
-    vertical-align: middle;
-}
-
 .alt_sutun {
     width: 293px;
     height: 77px;
     float: left;
+    cursor: pointer;
 }
 
 .alt_sutun span {
     position: relative;
     top: 30px;
+}
+
+.alt_sutun a {
     font-size: 10px;
+    text-decoration: none;
     color: #666666;
 }
+
 .tubitakuekae span { left: 99px; }
 .iletisim span { left: 103px; }
 .markapolitikasi span { left: 102px; }
