--- a/trunk/web/developer.pardus.org.tr/source/_static/default.css
+++ b/trunk/web/developer.pardus.org.tr/source/_static/default.css
@@ -42,6 +42,10 @@ div.document {
     min-height:500px;
 }
 
+html {
+    height: 100%;
+}
+
 div.bodywrapper {
     margin: 0 0 0 0px;
 }
@@ -72,10 +76,12 @@ div.footer {
     font-size: 75%;
     background: url("foot.png") repeat-x;
     height:30px;
-    margin:0;
     padding-top:20px;
     padding-bottom:0px;
     width: 100%;
+    clear:both;
+    position:absolute;
+    bottom:0px
 }
 
 div.footer a {
