--- a/trunk/web/developer.pardus.org.tr/source/_static/default.css
+++ b/trunk/web/developer.pardus.org.tr/source/_static/default.css
@@ -35,7 +35,7 @@ div.document {
     margin: auto;
     margin-top:20px;
     width: 900px;
-    background: white;
+    background-color: #FFFFFF;
     padding:16px;
     padding-top:0px;
     margin-top:0px;
@@ -347,13 +347,27 @@ div.body h6 {
     background-color: #f2f2f2;
     font-weight: normal;
     color: #20435c;
-    border-bottom: 1px solid #ccc;
+    border-bottom: 1px solid #CCCCCC;
     margin: 20px -20px 14px -20px;
     padding: 3px 0 3px 10px;
 }
 
-div.body h1 { margin-top: 0; font-size: 200%; }
-div.body h2 { font-size: 160%; }
+/* TODO: Change colors for different headings */
+div.body h1 {
+    margin-top: 0;
+    font-size: 200%;
+    background-color: #F2F2F2;
+    border-bottom: 1px solid #999999;
+}
+
+/* TODO: Change colors for different headings */
+div.body h2 {
+    margin-top: 0;
+    font-size: 160%;
+    background-color: #F2F2F2;
+    border-bottom: 1px solid #999999;
+}
+
 div.body h3 { font-size: 140%; }
 div.body h4 { font-size: 120%; }
 div.body h5 { font-size: 110%; }
