--- a/web/chiq/templates/home.html
+++ b/web/chiq/templates/home.html
@@ -9,7 +9,7 @@
 {% for news in news %}
   <div class="habercontain">
       <div class="haberpic"><img src="{{ news.image.file.url }}" width="48" height="48" alt="{{ news.title }}" /></div>
-<div class="haber"><span class="rhaberHeader">{{ news.title }}</span><br />
+      <div class="haber"><span class="rhaberHeader"><a href="{{ news.get_absolute_url }}">{{ news.title }}</a></span><br />
     <span class="habertext">{{ news.sum|safe }}</span></div>
   </div>
 {% endfor %}
