--- a/web/chiq/media/css/stil.css
+++ b/web/chiq/media/css/stil.css
@@ -64,10 +64,11 @@ body {
 	margin-right: 10px;
 	margin-top: 14px;
 }
-.rhaberHeader {
+.rhaberHeader a {
 	font-weight: bold;
 	color: #4d4e53;
 	display: block;
+	text-decoration: none;
 }
 .linksbar {
 	float:none;
