temp solution for footer

--- a/trunk/web/chiq/media/css/stil.css
+++ b/trunk/web/chiq/media/css/stil.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 /* CSS Document */
+img { border:none }
 body, td, th {
 	color: #7a7a7a;
 	font-family: Arial, Helvetica, sans-serif;
