link for download page

--- a/trunk/web/chiq/templates/base.html
+++ b/trunk/web/chiq/templates/base.html
@@ -20,7 +20,7 @@
 {% block content %}
 {% endblock %}
   </div>
-  <div class="sidebar"><img src="/media/resimler/sidebar/indirdownload.png" /><br />
+  <div class="sidebar"><a href="/indir/"><img src="/media/resimler/sidebar/indirdownload.png" /></a><br />
     <div class="search">
       <div class="aramabg"></div>
     </div>
